--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -223,13 +223,13 @@
 					<div class="row" id="british-milieu-3-b">
 						<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) &&@challenge.valeur_vote(current_user) == 1.0  %>
 							<div class= "moitie-gauche1">
-								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<span class="rapport-gauche"><%= @challenge.rapport_fc%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a>
 								</div>
 							</div>
 						<% else %>
 							<div class= "moitie-gauche">
-								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<span class="rapport-gauche"><%= @challenge.rapport_fc%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a>
 								</div>
 							</div>
@@ -237,12 +237,12 @@
 										
 						<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) && @challenge.valeur_vote(current_user) == -1.0 %>
 							<div class="moitie-droite1">
-								<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+								<span class="rapport-droite"><%= @challenge.rapport_fc1%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
 							</div>
 						<% else %>
 							<div class="moitie-droite">
-								<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+								<span class="rapport-droite"><%= @challenge.rapport_fc1%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
 							</div>
 						<% end%>					
@@ -251,13 +251,13 @@
 					<div class="row" id="british-milieu-3">
 						<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) &&@challenge.valeur_vote(current_user) == 2.0  %>
 							<div class= "moitie-gauche1">
-								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<span class="rapport-gauche"><%= @challenge.rapport_fc2%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 3", vote_challenge_challenge_path(@challenge, type: "upup"), class: "pour-first"%></a>
 								</div>
 							</div>
 						<% else %>
 							<div class= "moitie-gauche">
-								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<span class="rapport-gauche"><%= @challenge.rapport_fc2%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 3", vote_challenge_challenge_path(@challenge, type: "upup"), class: "pour-first"%></a>
 								</div>
 							</div>
@@ -265,12 +265,12 @@
 										
 						<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) && @challenge.valeur_vote(current_user) == -2.0 %>
 							<div class="moitie-droite1">
-								<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+								<span class="rapport-droite"><%= @challenge.rapport_fc3%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 4", vote_challenge_challenge_path(@challenge, type: "downdown"), class: "pour-second"%></a></div>
 							</div>
 						<% else %>
 							<div class="moitie-droite">
-								<span class="rapport-droite"><%= @challenge.rapport_inverse%>%</span>
+								<span class="rapport-droite"><%= @challenge.rapport_fc3%>%</span>
 								<div class="pour-truc"><a><%= link_to "Equipe 4", vote_challenge_challenge_path(@challenge, type: "downdown"), class: "pour-second"%></a></div>
 							</div>
 						<% end%>					
