--- a/app/views/challenge_mailer/new_argument.html.erb
+++ b/app/views/challenge_mailer/new_argument.html.erb
@@ -344,7 +344,7 @@
 	<tbody>
 		<tr>
 			<td class="td1" valign="middle" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-collapse: collapse !important;">
-			<p class="p1"><%= link_to "C'est à vous d'argumenter dans le débat '#{@challenge.title}'", challenge_url(@challenge)%>.</p>
+			<p class="p1"><%= link_to "C'est à vous d'argumenter dans le débat '#{@challenge.title}'", challenge_url(@challenge)%>. Vos adversaires vous attendent! Merci.</p>
 			</td>
 		</tr>
 	</tbody>
