--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,59 @@
-<h2>Change your password</h2>
+<div class="container">
+		<% content_for :main_content do %>
+<div id="sign_in">
+	<div class="row" id="sign_in1">
+		Il faut être connecté(e)
+	</div>
+	
+	<div class="facebook">
+		<span>Connectez-vous via</br></span>
+		<%=link_to "facebook", user_omniauth_authorize_path(:facebook),class: "via"%> ou <%=link_to "google", user_omniauth_authorize_path(:google_oauth2),class: "via"%>
+	</div>
+	
+	<div class="row" id="sign_in2">
+		<div class="span3" id="sign_in3">
+			<div class="row" id="sign_in4">
+				<span class="texte1">Mot de passe oublié?</span>
+			</div>
+			<div class="row" id= "sign_in4">
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+				<%= devise_error_messages! %>
+				<%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %>
+			</div>
+			<div class="row" id= "sign_in4">
+				  <%= f.submit "Envoyer le mail", class: "submit-login" %>
+				<% end%>
+			</div>
+		</div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+		<div class="span3" id="sign_up">
+			<div class="espace"></div>
+			<div class="row" id="sign_in4">
+				<span class="texte1"> Nouveau Mot de passe</span>
+			</div>
+			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+			<%= devise_error_messages! %>
+		  <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Change my password" %></div>
+			  <div class="row" id="sign_in4">
+				<%= f.password_field :password, :autofocus => true,  placeholder: "Mot de Passe:", class: "login-field1"%></div>
+			<div class="row" id= "sign_in4">
+				<%= f.password_field :password_confirmation, placeholder: "Encore une fois", class: "login-field1" %>
+			</div>
+			<div class="row" id= "sign_in4">
+				<%= f.submit "OK", class: "submit-login" %>	
+			</div>
+			<div class="row" id= "sign_in4">
+				
+			<% end%>
+			</div>
+			<div class="espace"></div>
+		</div>	
+	</div>
+	<div class="logo2">
+		<%= link_to (image_tag "gros-mouton-01.png"), root_path%>
+		<div class="titre"><%= link_to "moutoners", root_path, class: "title"%></div>
+	</div>
+		
+</div>
 <% end %>
-
-<%= render "devise/shared/links" %>
