--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -185,6 +185,7 @@
 					font-style: italic;
 					font-family: "georgia";
 					margin-left: 13px;
+					font-size: 12px;
 					
 					.cat2{
 					margin-left: 5px;
@@ -195,7 +196,7 @@
 					}
 					
 					.cat5{
-					margin-left: 12px;
+					margin-left: 6px;
 					}
 					
 					.cat6{
