--- a/app/views/challenges/_form.html.erb
+++ b/app/views/challenges/_form.html.erb
@@ -20,15 +20,15 @@
 								</label>
 							
 							<%= radio_button_tag "challenge[type_deb]", 3, challenge.type_deb == 3 %>
-							<label for="challenge_type_deb_3" class="non-selected" id="choix2"><span class= "texte">Duel</br>par équipes</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
+							<label for="challenge_type_deb_3" class="non-selected" id="choix2"><span class= "texte">Duel par</br>équipes (2x2)</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 						</div>
 						<div class="emotion2" id='typedeb2'>
 							<%= radio_button_tag "challenge[type_deb]", 4, challenge.type_deb == 4 %>
-							<label for="challenge_type_deb_4" class="non-selected" id="choix3"><span class= "texte">Quatre coins</br> individuel</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
+							<label for="challenge_type_deb_4" class="non-selected" id="choix3"><span class= "texte">Quatre coins</br> individuel (4x1)</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 				    	
 							
 							<%= radio_button_tag "challenge[type_deb]", 8, challenge.type_deb == 8 %>
-							<label for="challenge_type_deb_8" class="non-selected" id="choix4"><span class= "texte">Quatre coins par équipes</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
+							<label for="challenge_type_deb_8" class="non-selected" id="choix4"><span class= "texte">Quatre coins par équipes (4x2)</span><%= image_tag ("new-challenge.png"), class: "image"%></label>
 																				
 						</div>
 					<div>	
@@ -41,7 +41,7 @@
 						<span class="cat1">sport		  </span>
 						<span class="cat2">quotidien   </span>
 						<span class="cat3">monde       </span>
-						<span class="cat4">éco         </span>
+						<span class="cat4">économie         </span>
 						<span class="cat5">culture     </span>
 						<span class="cat6">sciences    </span>
 						<span class="cat7">philo       </span>
