--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -321,7 +321,7 @@
 	
 		
 		
-		<% if !@challenge.context == nil%>
+		<% if @challenge.content.presence%>
 		<div class="row">
 			<div class "row" id="to-be-closed">
 				<div id="effective-context"><div class="text"><%= h Rinku.auto_link(@challenge.content, :all, 'target="_blank"').gsub(/\n/, '<br/>').html_safe%></div></div>
