--- a/app/views/static_pages/list_ajoindre.html.erb
+++ b/app/views/static_pages/list_ajoindre.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="index-doulins">
 	<div class="row" id="intro-doulin">
-		<div class="texte">Débats codifiés en comité réduit</div>
+		<div class="texte">Les joutes actives ou en manque de participants.</div>
 	</div>
 	</br>
 	</br>
